--- a/project.ipynb
+++ b/project.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -200,7 +200,7 @@
        "4          1.62        1.5713  22.42  914.70  108.91  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -257,100 +257,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Accuracy: 52.898962863834065 %\n",
-      "classification report:\n",
-      "               precision    recall  f1-score   support\n",
-      "\n",
-      "           0       0.45      0.14      0.21      1120\n",
-      "           1       0.54      0.86      0.66      1328\n",
-      "\n",
-      "    accuracy                           0.53      2448\n",
-      "   macro avg       0.50      0.50      0.44      2448\n",
-      "weighted avg       0.50      0.53      0.46      2448\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# SVM\n",
-    "svm_scaler = StandardScaler()\n",
-    "svm_pca = PCA()\n",
-    "svm = SVC()\n",
+    "def SVM_trainer(data_X, data_Y):\n",
+    "    svm_scaler = StandardScaler()\n",
+    "    svm_pca = PCA()\n",
+    "    svm = SVC()\n",
     "\n",
-    "svm_ppl = Pipeline(steps=[('scaler', svm_scaler), ('pca', svm_pca), ('svm', svm)])\n",
+    "    svm_ppl = Pipeline(steps=[('scaler', svm_scaler), ('pca', svm_pca), ('svm', svm)])\n",
     "\n",
-    "svm_param_grid = {\n",
-    "    'pca__n_components': list(range(1, 11)),\n",
-    "    'svm__kernel': ['linear', 'rbf', 'poly']\n",
-    "}\n",
+    "    svm_param_grid = {\n",
+    "        'pca__n_components': list(range(1, 11)),\n",
+    "        'svm__kernel': ['linear', 'rbf', 'poly']\n",
+    "    }\n",
     "\n",
-    "svm_grid_search = GridSearchCV(svm_ppl, svm_param_grid, cv=5, scoring='accuracy')\n",
-    "svm_scores = cross_val_score(svm_grid_search, data_X, data_Y, cv=10)\n",
-    "svm_preds = cross_val_predict(svm_grid_search, data_X, data_Y, cv=10)\n",
-    "print(\"Accuracy:\", svm_scores.mean()*100, \"%\")\n",
-    "print(\"classification report:\\n\",classification_report(data_Y, svm_preds))"
+    "    svm_grid_search = GridSearchCV(svm_ppl, svm_param_grid, cv=5, scoring='accuracy')\n",
+    "    svm_scores = cross_val_score(svm_grid_search, data_X, data_Y, cv=10)\n",
+    "    svm_preds = cross_val_predict(svm_grid_search, data_X, data_Y, cv=10)\n",
+    "    print(\"Accuracy:\", svm_scores.mean()*100, \"%\")\n",
+    "    print(\"classification report:\\n\",classification_report(data_Y, svm_preds))\n",
+    "    return svm_grid_search\n",
+    "\n",
+    "# SVM_trainer(data_X, data_Y)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Accuracy: 50.53127999666124 %\n",
-      "Best parameters: {'knn__n_neighbors': 3, 'pca__n_components': 8}\n",
-      "Best score: 52.16501815450106 %\n",
-      "Accuracy: 50.03914694712242 %\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# KNN\n",
-    "scaler = StandardScaler()\n",
-    "pca = PCA()\n",
-    "knn_classifier = KNeighborsClassifier(n_neighbors=7)\n",
-    "ppl = Pipeline(steps=[('scaler', scaler), ('pca', pca), ('knn', knn_classifier)])\n",
-    "scores = cross_val_score(ppl, data_X, data_Y, cv=5) \n",
-    "print(\"Accuracy:\", scores.mean()*100, \"%\")\n",
+    "def KNN_trainer(data_X, data_Y):\n",
+    "    scaler = StandardScaler()\n",
+    "    pca = PCA()\n",
+    "    knn_classifier = KNeighborsClassifier(n_neighbors=7)\n",
+    "    ppl = Pipeline(steps=[('scaler', scaler), ('pca', pca), ('knn', knn_classifier)])\n",
+    "    scores = cross_val_score(ppl, data_X, data_Y, cv=5) \n",
+    "    print(\"Accuracy:\", scores.mean()*100, \"%\")\n",
     "\n",
-    "param_grid = {\n",
-    "    'pca__n_components': list(range(1, 11)),\n",
-    "    'knn__n_neighbors': list(range(1, 26))\n",
-    "}\n",
+    "    param_grid = {\n",
+    "        'pca__n_components': list(range(1, 11)),\n",
+    "        'knn__n_neighbors': list(range(1, 26))\n",
+    "    }\n",
     "\n",
-    "# your code goes here\n",
-    "knn_grid_search = GridSearchCV(ppl, param_grid, cv=5, scoring='accuracy')\n",
-    "knn_grid_search.fit(data_X, data_Y)\n",
-    "print(\"Best parameters:\", knn_grid_search.best_params_)\n",
-    "print(\"Best score:\", knn_grid_search.best_score_*100, \"%\")\n",
+    "    knn_grid_search = GridSearchCV(ppl, param_grid, cv=5, scoring='accuracy')\n",
+    "    knn_grid_search.fit(data_X, data_Y)\n",
+    "    print(\"Best parameters:\", knn_grid_search.best_params_)\n",
+    "    print(\"Best score:\", knn_grid_search.best_score_*100, \"%\")\n",
     "\n",
-    "knn_nested_score = cross_val_score(knn_grid_search, data_X, data_Y, cv=5)\n",
-    "print(\"Accuracy:\", knn_nested_score.mean()*100, \"%\")"
+    "    knn_nested_score = cross_val_score(knn_grid_search, data_X, data_Y, cv=5)\n",
+    "    print(\"Accuracy:\", knn_nested_score.mean()*100, \"%\")\n",
+    "    return knn_grid_search\n",
+    "# knn_grid_search = KNN_trainer(data_X, data_Y)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Accuracy: 52.326029798422425 %\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# NN\n",
     "nn_scaler = StandardScaler()\n",
@@ -369,37 +338,67 @@
     "    print(\"Accuracy:\", nn_scores.mean()*100, \"%\")\n",
     "    return nn_grid_search\n",
     "\n",
-    "nn_grid_search = NN_trainer(nn_ppl, nn_param_grid, data_X, data_Y)"
+    "# nn_grid_search = NN_trainer(nn_ppl, nn_param_grid, data_X, data_Y)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Ensamble\n",
+    "@ignore_warnings(category=ConvergenceWarning)\n",
+    "def ensamble_trainer(svm_grid_search, knn_grid_search, nn_grid_search, eclf):\n",
+    "    eclf = VotingClassifier(\n",
+    "        estimators=[('svm', svm_grid_search), ('knn', knn_grid_search), ('nn', nn_grid_search)],\n",
+    "        voting='hard')\n",
+    "    for clf, label in zip([svm_grid_search, knn_grid_search, nn_grid_search, eclf], ['SVM', 'KNN', 'Neural Network', 'Ensemble']):\n",
+    "        scores = cross_val_score(clf, data_X, data_Y, scoring='accuracy', cv=5)\n",
+    "        print(\"Accuracy: %0.2f (+/- %0.2f) [%s]\" % (scores.mean(), scores.std(), label))\n",
+    "        \n",
+    "# ensamble_trainer(svm_grid_search, knn_grid_search, nn_grid_search, eclf)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.54 (+/- 0.00) [SVM]\n",
-      "Accuracy: 0.50 (+/- 0.03) [KNN]\n",
-      "Accuracy: 0.52 (+/- 0.04) [Neural Network]\n",
-      "Accuracy: 0.52 (+/- 0.04) [Ensemble]\n"
+      "Accuracy: 53.941953830712606 %\n",
+      "classification report:\n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.48      0.07      0.12      1119\n",
+      "           1       0.54      0.94      0.69      1328\n",
+      "\n",
+      "    accuracy                           0.54      2447\n",
+      "   macro avg       0.51      0.50      0.40      2447\n",
+      "weighted avg       0.51      0.54      0.43      2447\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "# Ensamble\n",
-    "eclf = VotingClassifier(\n",
-    "        estimators=[('svm', svm_grid_search), ('knn', knn_grid_search), ('nn', nn_grid_search)],\n",
-    "        voting='hard')\n",
-    "@ignore_warnings(category=ConvergenceWarning)\n",
-    "def ensamble_trainer(svm_grid_search, knn_grid_search, nn_grid_search, eclf):\n",
-    "    for clf, label in zip([svm_grid_search, knn_grid_search, nn_grid_search, eclf], ['SVM', 'KNN', 'Neural Network', 'Ensemble']):\n",
-    "        scores = cross_val_score(clf, data_X, data_Y, scoring='accuracy', cv=5)\n",
-    "        print(\"Accuracy: %0.2f (+/- %0.2f) [%s]\" % (scores.mean(), scores.std(), label))\n",
-    "        \n",
-    "ensamble_trainer(svm_grid_search, knn_grid_search, nn_grid_search, eclf)"
+    "# Read data\n",
+    "data_dow = pd.read_csv(\"DOW30.csv\")\n",
+    "data_sp = pd.read_csv(\"SP500.csv\")\n",
+    "data_nas = pd.read_csv(\"NASDAQ.csv\")\n",
+    "\n",
+    "def process_data(target_dataset, dataset_label1, dataset_label2, label1, label2):\n",
+    "    data_processed = target_dataset.drop(['Date', 'TEDSpread', 'EFFR'],axis=1)\n",
+    "    labels1 = dataset_label1.iloc[0:, 1]\n",
+    "    labels2 = dataset_label2.iloc[0:, 1]\n",
+    "    data_processed[label1] = labels1\n",
+    "    data_processed[label1] = data_processed[label1].shift(periods=1, fill_value=-1)\n",
+    "    data_processed[label2] = labels2\n",
+    "    data_processed[label2] = data_processed[label2].shift(periods=1, fill_value=-1)\n",
+    "    data_processed = data_processed.iloc[1: , :]\n",
+    "    return data_processed"
    ]
   },
   {
@@ -407,7 +406,45 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# DOW30\n",
+    "data_dow_processed = process_data(data_dow, data_sp, data_nas, \"SP500\", \"NASDAQ\")\n",
+    "# print(dataset_dow_processed.head())\n",
+    "data_dow_Y = data_dow_processed['LABEL']\n",
+    "data_dow_X = data_dow_processed.drop(['LABEL'],axis=1)\n",
+    "svm_grid_search = SVM_trainer(data_dow_X, data_dow_Y)\n",
+    "knn_grid_search = KNN_trainer(data_X, data_Y)\n",
+    "nn_grid_search = NN_trainer(nn_ppl, nn_param_grid, data_X, data_Y)\n",
+    "eclf = VotingClassifier(\n",
+    "        estimators=[('svm', svm_grid_search), ('knn', knn_grid_search), ('nn', nn_grid_search)],\n",
+    "        voting='hard')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# SP500\n",
+    "data_sp_processed = process_data(data_sp, data_dow, data_nas, \"DOW30\", \"NASDAQ\")\n",
+    "data_sp_Y = data_sp_processed['LABEL']\n",
+    "data_sp_X = data_sp_processed.drop(['LABEL'],axis=1)\n",
+    "SVM_trainer(data_sp_X, data_sp_Y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# NASDAQ\n",
+    "data_nas_processed = process_data(data_nas, data_dow, data_sp, \"DOW30\", \"SP500\")\n",
+    "data_nas_Y = data_nas_processed['LABEL']\n",
+    "data_nas_X = data_nas_processed.drop(['LABEL'],axis=1)\n",
+    "SVM_trainer(data_nas_X, data_nas_Y)"
+   ]
   }
  ],
  "metadata": {
